# cpp-template

./: CMakeLists.txt  Makefile
include/: header.h
src/: CMakeLists.txt
